Actions
Bug #11729
closedmsgsys: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/os/msg.c:135:2: error: cast between incompatible function types from 'ssize_t (*)(int, uintptr_t, uintptr_t, uintptr_t, uintptr_t, uintptr_t)' {aka 'long int (*)(int, long unsigned int, long unsigned int, long unsigned int, long unsigned int, long unsigned int)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())msgsys ^ cc1: all warnings being treated as errors
Testing done: build/install/boot.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ac2ff9f2e2eb82a33700967848664529b93c03b0
commit ac2ff9f2e2eb82a33700967848664529b93c03b0 Author: Toomas Soome <tsoome@me.com> Date: 2019-11-15T16:56:47.000Z 11729 msgsys: cast between incompatible function types Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions